Fixed alignment

--- a/clients/core/src/containers/pages/Child/Profile/childProfile.css
+++ b/clients/core/src/containers/pages/Child/Profile/childProfile.css
@@ -77,5 +77,5 @@
 }
 
 .chart-div {
-  margin-left: 50px;
+  margin-left: 200px;
 }
